--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<toaster-container></toaster-container>
+<router-outlet></router-outlet>
+<nav-component></nav-component>
+<login-component *ngIf="showLogin"></login-component>
